--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+  <noscript>
+      <strong>你的浏览器不支持Javascript功能，卸了换一个</strong>
+  </noscript>
+
   </body>
 </html>
